Fix alignment and font color when showing gene seqs (#610)

--- a/common/styles/app.css
+++ b/common/styles/app.css
@@ -537,3 +537,9 @@ tbody{
 .markdown-container ol {
     list-style-type: decimal;
 }
+.markdown-container code {
+    padding-left: 0;
+    padding-right: 0;
+    color: #333;
+    background-color: #F5F5F5;
+}
